Fix tex to use \#.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8388 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -837,7 +837,7 @@ texture\_color : has texture parameter only when not within ShaderTexture.
 Texture parameter type corresponds to VRML/X3D node type (samplerXxx).
 
 vertex\_object\_space: if you may change vertex\_object,
-be sure to add #define VERTEX\_OBJECT\_SPACE\_CHANGED.
+be sure to add \#define VERTEX\_OBJECT\_SPACE\_CHANGED.
 TODO: nicer? Maybe just do it always when vertex\_object\_space is plugged?
 
 \section{Complete example models}
