It's --debug-log-shaders now.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8437 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -884,8 +884,9 @@ You can open the examples using any of our engine tools,
 like \texttt{view3dscene} from
 \myhref{http://vrmlengine.sourceforge.net/view3dscene.php}{http://vrmlengine.sourceforge.net/view3dscene.php}.
 
-You can run \texttt{view3dscene} with \texttt{--debug-log} command-line
-option. Output (stdout) will show you the final shader code generated.
+You can run \texttt{view3dscene} with \texttt{--debug-log-shaders} command-line
+option. Output (stdout) will show you the final shader code generated,
+and also the OpenGL log after linking shaders.
 This is a useful way to learn about our shader rendering internals.
 
 Another useful option to try in \texttt{view3dscene} is to switch to
