More some urls to bibliography. Links to humus.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8460 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -17,3 +17,23 @@
   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi\_vrml\_extensions.php#section\_ext\_bump\_mapping}"
 }
 
+@misc{humus:volumetricfog,
+  title = "{Volumetric Fogging 2}",
+  author = {Emil Persson "Humus"},
+  year = "2006",
+  howpublished = "\url{http://www.humus.name/index.php?page=3D&ID=70}; nice overview also on \url{http://www.evl.uic.edu/sjames/cs525/shader.html}"
+}
+
+@misc{vrmleng:texcoordbounds,
+  title = "Tex coord generation dependent on bounding box",
+  author = "Michalis Kamburelis",
+  year = "2010",
+  howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
+}
+
+@misc{vrmleng:projectivetexturing,
+  title = "Projective texture mapping",
+  author = "Michalis Kamburelis",
+  year = "2010",
+  howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
+}
