Don't show water_shaders_0, it's not needed, and the difference between water_shaders_0 and water_shaders_1 is not noticeable at small size anyway.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8461 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -859,14 +859,13 @@ in real-time.)
 
 \begin{figure*}[t]
   \centering
-  \includegraphics[width=2.2in]{water_shaders_0}
+%  \includegraphics[width=2.2in]{water_shaders_0}
   \includegraphics[width=2.2in]{water_shaders_1}
   \includegraphics[width=2.2in]{water_shaders_2}
   \includegraphics[width=2.2in]{water_shaders_3}
-  \caption{Water using our effects: 1) Only per-pixel lighting on transparent
-plane. 2) Per-pixel lighting and bump mapping. 3) Per-pixel lighting and
-reflections and refractions (by a single environment cube map texture).
-4) All effects.}
+  \caption{Water using our effects: 1) Per-pixel lighting and bump mapping.
+2) Per-pixel lighting and reflections and refractions (by a single environment cube map texture).
+3) All effects.}
 \end{figure*}
 
 We can also wrap 2D and 3D noise inside a \texttt{ShaderTexture}.
