--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -520,13 +520,11 @@ or texture.
 We add the \texttt{effects} field for every light node:
 
 \begin{mycode}
-\underline{X3DLightSource}
+\underline{X3DLightNode}
 \begin{Verbatim}[commandchars=\\\{\}]
 MFNode [] \codeem{effects} [] # Effect
 \end{Verbatim}
 \end{mycode}
-
-%% TODO check and fix above X3Dxxx class names.
 
 You can modify the light source contribution, or even replace the default
 calculation of light source contribution. In the second case,
@@ -543,8 +541,6 @@ Just like the light sources, also each texture node may define it's own effects:
 MFNode [] \codeem{effects} [] # Effect
 \end{Verbatim}
 \end{mycode}
-
-%% TODO check and fix above X3Dxxx class names.
 
 You can use the \texttt{effects} field
 inside any \texttt{X3DTextureNode} to enhance and modify the look of any
@@ -712,17 +708,6 @@ Similarly, if you use the \texttt{PLUG\_light\_scale}
 inside \texttt{Appearance.effects}, you can change the intensity
 of all the light sources on the given shape.
 
-Special plug names \$declare-variables\$, \$declare-forward-procedures\$,
-\$declare-procedures\$ are used to designate a place where functions are placed.
-These are only useful if you create your own ComposedShader node,
-and you would like to allow effects framework to cooperate with
-your ComposedShader. They will be used to place
-variable and procedure declarations (preferably, external declarations
-of procedures, actually defined in other compilation unit,
-for shading languages supporting this).
-TODO: otherwise place them at the beginning?
-TODO: test such ComposedShader, should work but not tested yet.
-
 Currently all the plugs must be procedures, that is their result type
 must be declared as \texttt{void}. We have been considering
 a possibility of functions, where part of the calculation may be replaced
@@ -734,6 +719,32 @@ some previous code. This also means that using a procedural plug
 \textit{never} replaces or removes some existing code, which is a very nice
 concept to keep. We want the effects to cooperate with each other,
 not to ,,hijack'' from each other some parts of functionality.
+
+\subsection{Where the forward declarations are placed}
+
+Special plug name \texttt{\$declare-forward-procedures\$} may be used
+near the beginning of your shader source code. It is only useful
+if your shader code defines any new plugging points, that is if you
+have any magic \texttt{/* PLUG: ... */} comments inside.
+When some other effect uses your plugging point, the browser adds
+an appropriate call to a function in that effect.
+Additionally, the browser has to declare the function,
+because it may be in a separate compilation unit (in case of GLSL),
+or just defined later in the code.
+These (forward or external) declarations are inserted at
+the point of special \texttt{/* PLUG: \$declare-forward-procedures\$ */}
+comment, or (when it is missing) simply at the beginning of your shader source.
+This applies in the same way to shader code inside an \texttt{EffectPart},
+or inside standard X3D node like \texttt{ShaderPart}.
+
+Using \texttt{\$declare-forward-procedures\$} may be necessary
+as some shading language directives are required to be placed before
+all normal declarations. For example, in case of OpenGL shading language,
+the \texttt{\#version} as well as some \texttt{\#extension} directives
+must occur at the beginning of the shader code. You should place
+\texttt{/* PLUG: \$declare-forward-procedures\$ */} after such
+directives. Remember that they also must be placed outside of any
+function body, and before any normal \texttt{/* PLUG: ... */} declarations.
 
 \subsection{Why plugs are defined as comments}
 
@@ -882,9 +893,10 @@ may be implemented on GPU by a simple prototype using \texttt{ShaderTexture}.
 \end{figure}
 
 We would like to emphasize that all the effects demonstrated here
-are theoretically already possible by using the X3D shaders component.
-%% TODO: proper name
-However, actually implementing them is extremely cumbersome: you would first
+are theoretically already possible by using the X3D \textit{Programmable
+shaders component} component.
+However, actually implementing them is extremely cumbersome using this
+standard component. You would first
 have to prepare a shader code to calculate all the (multi-)texturing, lighting,
 shadows, and all the other effects that you use in your scene.
 This is a large work if you consider all the X3D options, and note that
