--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -926,10 +926,8 @@ specials:
 texture\_color : has texture parameter only when not within ShaderTexture.
 Texture parameter type corresponds to VRML/X3D node type (samplerXxx).
 
-vertex\_object\_space: if you may change vertex\_object,
-be sure to add \#define VERTEX\_OBJECT\_SPACE\_CHANGED.
-TODO: nicer? Maybe just do it always when vertex\_object\_space is plugged?
-Yes, invent special vertex\_object\_space\_change for this.
+vertex\_object\_space, vertex\_object\_space\_change: you can change
+only in the 1st one.
 
 \section{Complete example models}
 
