Rename everywhere kambi_vrml_test_suite to demo_models.
Also various improvements to text at the beginning of our kambi_vrml_test_suite.php.


git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8516 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -941,13 +941,13 @@ only in the 1st one.
 \section{Complete example models}
 
 Examples are available inside our engine demo models on
-\myhref{http://vrmlengine.sourceforge.net/kambi\_vrml\_test\_suite.php}{http://vrmlengine.sourceforge.net/kambi_vrml_test_suite.php}.
+\myhref{http://vrmlengine.sourceforge.net/demo\_models.php}{http://vrmlengine.sourceforge.net/demo_models.php}.
 The relevant demos are mainly inside \texttt{compositing\_shaders},
 also the \texttt{water} contains examples of the water implementation
 using our effects.
 You can checkout them from SVN, or just browse through a web browser,
 using the URL
-\myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi\_vrml\_test\_suite/compositing\_shaders/}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi_vrml_test_suite/compositing_shaders/}.
+\myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo\_models/compositing\_shaders/}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo_models/compositing_shaders/}.
 
 You can open the examples using any of our engine tools,
 like \texttt{view3dscene} from
