--- a/shadow_maps_x3d/shadow_maps_x3d.tex
+++ b/shadow_maps_x3d/shadow_maps_x3d.tex
@@ -1072,7 +1072,7 @@ the \emph{results} of the shadow tests.
 %% , that is the results
 %% of \texttt{shadow2DProj} calls.
 A trivial implementation inside GLSL shader may be seen here:
-\myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi\_vrml\_test\_suite/shadow\_maps/shadow\_map\_pcf4.fs}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi_vrml_test_suite/shadow_maps/shadow_map_pcf4.fs}.
+\myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo\_models/shadow\_maps/shadow\_map\_pcf4.fs}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo_models/shadow_maps/shadow_map_pcf4.fs}.
 %% A good hardware may also help here. Modern GPUs may
 %% internally filter at least four depth comparison results.
 
@@ -1105,7 +1105,7 @@ An open-source implementation of these extensions is available in our engine on
 \myhref{http://vrmlengine.sourceforge.net/}{http://vrmlengine.sourceforge.net/}.
 You can test it for example with our \texttt{view3dscene} tool.
 An example VRML/X3D files with the shadow maps and the GLSL shaders are available in our test suite
-on \myhref{http://vrmlengine.sourceforge.net/kambi\_vrml\_test\_suite.php}{http://vrmlengine.sourceforge.net/kambi_vrml_test_suite.php}
+on \myhref{http://vrmlengine.sourceforge.net/demo\_models.php}{http://vrmlengine.sourceforge.net/demo_models.php}
 (inside \texttt{x3d/shadow\_maps/} subdirectory).
 
 Our implementation uses the basic OpenGL tools: we render to the depth
