--- a/shadow_maps_x3d/shadow_maps_x3d.tex
+++ b/shadow_maps_x3d/shadow_maps_x3d.tex
@@ -1106,7 +1106,7 @@ An open-source implementation of these extensions is available in our engine on
 You can test it for example with our \texttt{view3dscene} tool.
 An example VRML/X3D files with the shadow maps and the GLSL shaders are available in our test suite
 on \myhref{http://vrmlengine.sourceforge.net/demo\_models.php}{http://vrmlengine.sourceforge.net/demo_models.php}
-(inside \texttt{x3d/shadow\_maps/} subdirectory).
+(inside \texttt{shadow\_maps/} subdirectory).
 
 Our implementation uses the basic OpenGL tools: we render to the depth
 texture using the framebuffer object, and we set up projective texturing
@@ -1220,7 +1220,7 @@ a lot of the improvements.
 The 3D scenery with trees and towers visible on many screenshots in this paper
 was constructed with the help of the assets from \myhref{http://opengameart.org}{http://opengameart.org},
 a great site with good quality 3D assets on clear open-source licenses.
-See the \myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/papers/shadow\_maps\_x3d/sunny\_street/}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/papers/shadow_maps_x3d/sunny_street/}
+See the \myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo\_models/shadow\_maps/sunny\_street/}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo_models/shadow_maps/sunny_street/}
 for the full scene code in X3D, helper transformation program and the
 \texttt{README.txt} file with detailed credits.
 
