Refer to demo\_models, not kambi\_vrml\_test\_suite.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8528 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -942,9 +942,9 @@ only in the 1st one.
 
 Examples are available inside our engine demo models on
 \myhref{http://vrmlengine.sourceforge.net/demo\_models.php}{http://vrmlengine.sourceforge.net/demo_models.php}.
-The relevant demos are mainly inside \texttt{compositing\_shaders},
-also the \texttt{water} contains examples of the water implementation
-using our effects.
+The relevant demos are mostly inside the \texttt{compositing\_shaders}
+subdirectory, also the \texttt{water} subdirectory contains
+the water implementation using our effects.
 You can checkout them from SVN, or just browse through a web browser,
 using the URL
 \myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo\_models/compositing\_shaders/}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/demo_models/compositing_shaders/}.
@@ -969,7 +969,7 @@ how our shaders implement the whole X3D lighting and texturing model.
 It also makes the whole lighting calculation per-pixel, resulting
 in particular in beautiful light spot highlights.
 
-Development notes: only the SVN kambi\_vrml\_test\_suite contains
+Development notes: only the SVN demo\_models contain
 compositing\_shaders subdirectory.
 You also have to use view3dscene from SVN or nightly builds,
 see \myhref{http://michalis.ii.uni.wroc.pl/vrmlengine-snapshots/}{http://michalis.ii.uni.wroc.pl/vrmlengine-snapshots/}.
